--- a/index.html
+++ b/index.html
@@ -154,8 +154,9 @@
    <!--start footer-->
    <footer>
    <div class="container">  
-   <div id="FooterTwo"> © 2011 Think simple </div>
-   <div id="FooterTree"> Valid html5, design and code by <a href="http://www.marijazaric.com">marija zaric - creative simplicity</a>   </div> 
+   <div id="FooterTwo"> © QUTA 2015 </div>
+<div id="FooterTree"> Valid html5, design and code by <a href="http://ahsheikh.quest.edu.pk">Dr. A H Sheikh </a>   </div> 
+   <!-- <div id="FooterTree"> Valid html5, design and code by <a href="http://www.marijazaric.com">marija zaric - creative simplicity</a>   </div> -->
    </div>
    </footer>
    <!--end footer-->
