--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
      
    <section class="group2">
    <h3>Services</h3>
-   	<p>QUTA elected members tries theier best to ensure the dignity, respect and rights of teachers of QUEST, Nawabshah. </p>
+   	<p>QUTA elected members try their best to ensure the dignity, respect and rights of teachers of QUEST, Nawabshah. </p>
 	<a href=""><span class="read_more">Read more ...</span></a>
 
 	</section>
