--- a/tabs/contact.html
+++ b/tabs/contact.html
@@ -47,10 +47,11 @@
 	<li><a href="#">Services</a></li>
 	<li><a href="#">Portfolio</a></li>
     <li><a href="#">News</a></li>
-    <li><a href="contact.html">Contact</a></li>
+    <li><a href="#">Contact</a></li>
 
     </ul>
     </nav>
+
 	<!--end menu-->
 	
 
